feat: added user activation endpoint via token
